--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "axios": "^0.18.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
+    "react-exif-orientation-img": "^0.1.5",
     "react-router-dom": "^5.0.0",
     "react-scripts": "3.0.1"
   },
